# hack-vm-translator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml  zizmor.yml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
maint/: setup.sh  suggested_config.toml
src/: lib.rs  main.rs
src/lib/: error.rs  lib.rs  parser.rs  translator.rs
supply-chain/: audits.toml  config.toml
