[package]
name = "hack-vm-translator"
version = "0.1.0"
edition = "2024"
description = """\
              A VM translator that parses Hack VM commands and generates Hack \
              assembly.
              """
repository = "https://github.com/hashcatHitman/hack-vm-translator"
license = "AGPL-3.0-or-later"
keywords = ["nand2tetris", "vm"]
categories = ["command-line-utilities", "compilers"]
publish = false

[lib]
path = "src/lib/lib.rs"

[lints.rust]
unsafe_code = "forbid"
deprecated_safe_2024 = "forbid"
missing_unsafe_on_extern = "forbid"
unsafe_attr_outside_unsafe = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
fuzzy_provenance_casts = "warn"
if_let_rescope = "warn"
lossy_provenance_casts = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unqualified_local_imports = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
correctness = "forbid"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
cargo = "warn"
missing_docs_in_private_items = { level = "warn", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = "warn"
unwrap_used = { level = "warn", priority = 1 }
expect_used = { level = "warn", priority = 1 }

[dependencies]

[profile.release]
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
lto = true
incremental = false

[profile.release.build-override]
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
incremental = false
